--- a/template/header/header.html
+++ b/template/header/header.html
@@ -83,7 +83,7 @@
           </button>
           <button
             class="button-new button-new-small text_regular btn-shadow btn-active hideValueButton"
-            data-hide-state="true">
+            data-hide-state="false">
             $
           </button>
           <button
