--- a/template/modals/key-performance/key-performance.html
+++ b/template/modals/key-performance/key-performance.html
@@ -36,6 +36,13 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p
+                    class="selector__dropdown-text text_regular"
+                    data-selector-value="daily-kpi-%">
+                    Balance %
+                  </p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p
                     class="selector__dropdown-text text_regular"
@@ -235,6 +242,13 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p
+                    class="selector__dropdown-text text_regular"
+                    data-selector-value="weekly-kpi-$">
+                    Balance $
+                  </p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p
                     class="selector__dropdown-text text_regular"
@@ -434,6 +448,13 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p
+                    class="selector__dropdown-text text_regular"
+                    data-selector-value="monthly-kpi-disabled"">
+                    Disable
+                  </p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p
                     class="selector__dropdown-text text_regular"
@@ -637,6 +658,13 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p
+                    class="selector__dropdown-text text_regular"
+                    data-selector-value="daily-kpi-demo-%">
+                     Balance %
+                  </p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p
                     class="selector__dropdown-text text_regular"
@@ -836,6 +864,13 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p
+                    class="selector__dropdown-text text_regular"
+                    data-selector-value="weekly-kpi-demo-$">
+                    Balance $
+                  </p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p
                     class="selector__dropdown-text text_regular"
@@ -1035,6 +1070,13 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p
+                    class="selector__dropdown-text text_regular"
+                    data-selector-value="monthly-kpi-demo-disabled">
+                    Disable
+                  </p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p
                     class="selector__dropdown-text text_regular"
