--- a/template/statistic/bar.html
+++ b/template/statistic/bar.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item">
+    <div class="statistic-bar-item" data-prediction="true">
       <div class="statistic-bar-item__caption">Prediction %</div>
 
       <div class="statistic-bar-item__value-wrapper">
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div class="statistic-bar-item" data-unit="$">
+    <div class="statistic-bar-item" data-unit="$" data-prediction="true">
       <div class="statistic-bar-item__caption">Prediction $</div>
 
       <div class="statistic-bar-item__value-wrapper">
