--- a/template/statistic/header.html
+++ b/template/statistic/header.html
@@ -85,7 +85,7 @@
           </button>
           <button
             class="button-new button-new-small text_regular btn-shadow btn-active hideValueButton"
-            data-hide-state="true">
+            data-hide-state="false">
             $
           </button>
           <button
@@ -120,12 +120,13 @@
       <button
         class="button-new button-new--navbar button-new_normal text_large btn-shadow btn-active hideValueButton"
         data-type="btn"
-        data-hide-state="true">
+        data-hide-state="false">
         Usdt
       </button>
       <button
-        class="button-new button-new--navbar button-new_normal text_large btn-shadow"
-        data-type="btn">
+        class="button-new button-new--navbar button-new_normal text_large btn-shadow btn-active hidePredictionValueButton"
+        data-type="btn"
+        data-hide-state="false">
         Prediction
       </button>
     </div>
