--- a/styles/_grid-layout.scss
+++ b/styles/_grid-layout.scss
@@ -295,10 +295,8 @@
       grid-template-columns: repeat(3, 322px);
     }
   }
-  
 }
 
-
 .grid-cols-2 {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
