--- a/template/modals/risk-manager/risk-manager.html
+++ b/template/modals/risk-manager/risk-manager.html
@@ -69,6 +69,13 @@
 
                 <div class="selector__dropdown">
                   <ul>
+                    <li class="padding-contaier_xsmall active">
+                      <p
+                        class="selector__dropdown-text text_regular"
+                        data-selector-value="daily-loss-$">
+                        Daily Loss $
+                      </p>
+                    </li>
                     <li class="padding-contaier_xsmall">
                       <p
                         class="selector__dropdown-text text_regular"
@@ -280,6 +287,13 @@
 
                 <div class="selector__dropdown">
                   <ul>
+                    <li class="padding-contaier_xsmall active">
+                      <p
+                        class="selector__dropdown-text text_regular"
+                        data-selector-value="squeeze-risk-%">
+                        Squeeze Risk %
+                      </p>
+                    </li>
                     <li class="padding-contaier_xsmall">
                       <p
                         class="selector__dropdown-text text_regular"
@@ -556,6 +570,116 @@
                 <div class="input-text-center right-small input-disabled">
                   <div class="data-wrap" data-type="dynamic" data-state="ture">
                     <p class="text_large text__color_grey">5002</p>
+                    <p class="text_small text__color_grey">$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="line">
+        <div class="switcher-wrap switcher-wrap_gap-medium grid-row-switcher-3">
+          <div class="form-switch">
+            <input
+              class="form-check-input custom-outline m-auto"
+              type="checkbox"
+              role="switch"
+              checked />
+          </div>
+          <div class="data-wrap">
+            <p class="text text_regular text__color_dark-grey">
+              Max usdt in positions
+            </p>
+          </div>
+          <div class="handler-box ms-auto">
+            <div class="data-info-container data-info-container_medium">
+              <div
+                class="input-container-wrap input-container-wrap_tiny left"
+                data-input="input-field">
+                <div class="input-wrapp input-wrapp_left">
+                  <input
+                    class="input-field input-field_left text_large text__color_dark-grey"
+                    type="text"
+                    data-type="number"
+                    data-unit="$" />
+                </div>
+                <div class="input-text-center">
+                  <div class="data-wrap" data-type="dynamic" data-state="ture">
+                    <p class="text_large text__color_dark-grey">14.2k</p>
+                    <p class="text_small text__color_dark-grey">$</p>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="input-container-wrap input-container-wrap_tiny right"
+                data-input="input-field">
+                <div class="input-wrapp input-wrapp_right hidden">
+                  <input
+                    class="input-field input-field_right text_large text__color_dark-grey"
+                    type="text"
+                    data-type="number"
+                    data-unit="X" />
+                </div>
+                <div class="input-text-center right-small input-disabled">
+                  <div class="data-wrap" data-type="dynamic" data-state="ture">
+                    <p class="text_large text__color_grey">14.6</p>
+                    <p class="text_small text__color_grey">x</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="line">
+        <div class="switcher-wrap switcher-wrap_gap-medium grid-row-switcher-3">
+          <div class="form-switch">
+            <input
+              class="form-check-input custom-outline m-auto"
+              type="checkbox"
+              role="switch"
+              checked />
+          </div>
+          <div class="data-wrap">
+            <p class="text text_regular text__color_dark-grey">
+              Max total leverage
+            </p>
+          </div>
+          <div class="handler-box ms-auto">
+            <div class="data-info-container data-info-container_medium">
+              <div
+                class="input-container-wrap input-container-wrap_tiny left"
+                data-input="input-field">
+                <div class="input-wrapp input-wrapp_left">
+                  <input
+                    class="input-field input-field_left text_large text__color_dark-grey"
+                    type="text"
+                    data-type="number"
+                    data-unit="X" />
+                </div>
+                <div class="input-text-center">
+                  <div class="data-wrap" data-type="dynamic" data-state="ture">
+                    <p class="text_large text__color_dark-grey">20</p>
+                    <p class="text_small text__color_dark-grey">x</p>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="input-container-wrap input-container-wrap_tiny right"
+                data-input="input-field">
+                <div class="input-wrapp input-wrapp_right hidden">
+                  <input
+                    class="input-field input-field_right text_large text__color_dark-grey"
+                    type="text"
+                    data-type="number"
+                    data-unit="$" />
+                </div>
+                <div class="input-text-center right-small input-disabled">
+                  <div class="data-wrap" data-type="dynamic" data-state="ture">
+                    <p class="text_large text__color_grey">10k</p>
                     <p class="text_small text__color_grey">$</p>
                   </div>
                 </div>
