--- a/template/modals/settings/settings.html
+++ b/template/modals/settings/settings.html
@@ -171,6 +171,11 @@
 
                       <div class="selector__dropdown">
                         <ul>
+                          <li class="padding-contaier_xsmall active">
+                            <p class="selector__dropdown-text text_regular">
+                              Native (.Net)
+                            </p>
+                          </li>
                           <li class="padding-contaier_xsmall">
                             <p class="selector__dropdown-text text_regular">
                               Websocket4Net
@@ -204,6 +209,11 @@
 
                       <div class="selector__dropdown">
                         <ul>
+                          <li class="padding-contaier_xsmall active">
+                            <p class="selector__dropdown-text text_regular">
+                              Trades
+                            </p>
+                          </li>
                           <li class="padding-contaier_xsmall">
                             <p class="selector__dropdown-text text_regular">
                               Candle
@@ -235,7 +245,7 @@
 
                       <div class="selector__dropdown">
                         <ul>
-                          <li class="padding-contaier_xsmall">
+                          <li class="padding-contaier_xsmall active">
                             <p class="selector__dropdown-text text_regular">
                               Live
                             </p>
@@ -388,8 +398,8 @@
               <button
                 class="button-new button-new_large text_regular btn-active"
                 data-type="btn"
-                data-state-text="Connect">
-                Disconnect
+                data-state-text="Disconnect">
+                Connect
               </button>
             </div>
           </div>
@@ -1512,6 +1522,11 @@
 
                       <div class="selector__dropdown">
                         <ul>
+                          <li class="padding-contaier_xsmall active">
+                            <p class="selector__dropdown-text text_regular">
+                              HTTP
+                            </p>
+                          </li>
                           <li class="padding-contaier_xsmall">
                             <p class="selector__dropdown-text text_regular">
                               SOCKS 4
@@ -1657,8 +1672,8 @@
               <button
                 class="button-new button-new_large text_regular btn-active"
                 data-type="btn"
-                data-state-text="Connect">
-                Disconnect
+                data-state-text="Disconnect">
+                Connect
               </button>
             </div>
           </div>
