--- a/template/modals/symbol-setup/symbol-setup.html
+++ b/template/modals/symbol-setup/symbol-setup.html
@@ -33,6 +33,9 @@
 
             <div class="selector__dropdown">
               <ul>
+                <li class="padding-contaier_xsmall active">
+                  <p class="selector__dropdown-text text_large">Opusdt</p>
+                </li>
                 <li class="padding-contaier_xsmall">
                   <p class="selector__dropdown-text text_large">ethusdt</p>
                 </li>
@@ -706,6 +709,9 @@
 
               <div class="selector__dropdown">
                 <ul>
+                  <li class="padding-contaier_xsmall active">
+                    <p class="selector__dropdown-text text_large">Crossed</p>
+                  </li>
                   <li class="padding-contaier_xsmall">
                     <p class="selector__dropdown-text text_large">Isolated</p>
                   </li>
