--- a/template/modals/preset-master/preset-master.html
+++ b/template/modals/preset-master/preset-master.html
@@ -10,12 +10,13 @@
         <img
           class="modal-window-close-icon closeModalTrigger"
           src="./img/close.svg"
-          alt="close-cross" />
+          alt="close-cross"
+        />
       </div>
       <div class="modal-preset-master__grid">
         <div class="modal-preset-master__subgrid presetMasterContainer"></div>
 
-        <div class="modal-preset-master__row">
+        <!-- <div class="modal-preset-master__row">
           <div
             class="input-container-wrap input-container-wrap_large-2"
             data-input="input-field">
@@ -36,7 +37,9 @@
             class="button-new button-new-plus button-non-press text_large btn-shadow btn-plus createNewPresetButton">
             +
           </button>
-        </div>
+        </div> 
+         >>>>>>>>>>>>>> this part of HTML add new preset input field and button to modal form remove comment line and edit js file preset-master.js
+        -->
       </div>
     </div>
   </div>
@@ -46,11 +49,13 @@
   <div class="modal-preset-master__row presetMasterRow" id="">
     <div
       class="input-container-wrap input-container-wrap_large-2"
-      data-input="input-field">
+      data-input="input-field"
+    >
       <div class="input-wrapp">
         <input
           class="input-field text_large text__color_dark-grey"
-          type="text" />
+          type="text"
+        />
       </div>
       <div class="input-text-center">
         <div class="data-wrap" data-type="dynamic" data-state="ture">
@@ -62,7 +67,8 @@
       </div>
     </div>
     <button
-      class="button-new button-new-small button-non-press text_large btn-shadow removePresetButton">
+      class="button-new button-new-small button-non-press text_large btn-shadow removePresetButton"
+    >
       X
     </button>
   </div>
